2003-06-02  Glenn Randers-Pehrson <randeg@alum.rpi.edu>

	* png.c: Merge bugfixes from 1.1 branch:
	* MNG encoder failed to set the JNG bit in the simplicity profile.
	* MNG encoder failed to write FRAM chunks when all images were JNG.
	* JNG encoder wrote the wrong alpha_sample_depth for opaque images. 
	* coders/png.c: png.c would dump core when writing a grayscale
	image in png24 or png32 format.

2003-06-02  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/version.h.in: Change to be Copyright (C) 2002, 2003.
	* NEWS: Updated to incorporate changes since the 1.0 release.
	* version.sh: Bump library revision and release version since code
	updates have been made.
	* libxml/libxml2.def: Remove 'LIBRARY libxml2' statement which
	confuses Visual C++ 6.0.

2003-05-31  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/viff.c (RegisterVIFFImage): Module definition for "XV"
	was missing.
	* coders/ps2.c (RegisterPS2Image): Module definition for "PS2" was
	missing.
	* coders/jpeg.c (RegisterJPEGImage): Module definition for "JPEG"
	was missing.
	* coders/html.c (RegisterHTMLImage): Module definition for "HTML"
	was missing.
	* coders/bmp.c (RegisterBMPImage): Module names for "BMP2" and
	"BMP3" should be "BMP".

2003-05-28  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/command.c (MogrifyImageCommand): Wrong exception
	macro was being invoked.  Steps have been taken to ensure that
	this doesn't happen again.
	(ImportUsage): Fix spelling of 'type'.

2003-05-26  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/ept.c (WriteEPTImage): Fixed writing EPT preview image and
	added logging.
	* PerlMagick/Magick.xs: Fix spelling of 'elevation' argument to
	Shade method.
	* magick/image.c (CloneImage): Don't clone huffman ascii85
	encoding support structure since it is not useful outside of the
	current image context. Cloning a structure via pointer assignment
	causes a memory leak.
