@@ -67,6 +67,7 @@ Major changes associated with GraphicsMagick 1.0.2 (Pending)
   <LI> Minor memory leak fixed.
   <LI> Fixed PerlMagick Shade 'elevation' argument.
   <LI> Fixed EPT writing.
+  <LI> PNG, MNG, and JNG writer fixes.
   <LI> Fixed an error handling path in mogrify command.
   <LI> Added missing module mappings for a number of coders.
   <LI> Fixed problem with libxml/libxml2.def &amp; Visual C++ 6.0.
